# simple_deep_research

./: GROQ_MIGRATION_GUIDE.md  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/: prompts.py  research_agent.py
